# compiler

./: CMakeLists.txt  README.md  asmcode.cpp  asmcode.h  asmgenerator.cpp  asmgenerator.h  bnf  exceptions.h  main.cpp  node.cpp  node.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  scanner.cpp  scanner.h  symbol.cpp  symbol.h  symboltable.cpp  symboltable.h  test-gen.sh  test-parse-simple.sh  test-parse.sh  test.sh  token.cpp  token.h  treeviewer  types.h
test-gen/: and-or.in  and-or.opt.s  and-or.out  and-or.s  arr-rec-arr.in  arr-rec-arr.opt.out  arr-rec-arr.opt.s  arr-rec-arr.s  array-01.in  array-01.opt.s  array-01.s  array-02.in  array-02.opt.out  array-02.opt.s  array-02.s  array-pointer-deref.in  array-pointer-deref.opt.s  array-pointer-deref.s  assign-record.in  assign-record.opt.s  assign-record.s  at-deref.in  at-deref.opt.out  at-deref.opt.s  at-deref.s  cmp-float.in  cmp-float.opt.s  cmp-float.out  cmp-float.s  cmp-int.in  cmp-int.opt.s  cmp-int.s  for.in  for.opt.s  for.s  function  function.s  if.in  if.opt.s  if.s  (+67 more)
test-parse-simple/: asgn-unmin-mul-lus-less-01.in  asgn-unmin-mul-lus-less-01.std  asgn-unmin-mul-lus-less-02.in  asgn-unmin-mul-lus-less-02.std  caret-01-01.in  caret-01-01.std  caret-01-02.in  caret-02-02.in  caret-02-02.std  caret-03-01.std  caret-03-02.std  caret-04-01.std  caret-05-02.in  caret-05-02.std  caret-06-01.in  caret-06-02.std  char-01.in  char-01.std  commas-01.in  commas-02.in  commas-02.std  comment-01.std  dot-01.in  dot-02.std  eq-plus-mul-02.in  eq-plus-mul-02.std  err-02-01.errin  err-03-01.std  err-05-01.std  (+62 more)
(+315 files in other folders)
