project(compiler)
set (CMAKE_CXX_STANDARD 14)
cmake_minimum_required(VERSION 3.1)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g -Werror=return-type -ansi -pedantic -Werror=pedantic")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror=return-type -ansi -pedantic -Werror=pedantic")
